Increase grid gap to match reference

--- a/007-admin-dashboard/styles.css
+++ b/007-admin-dashboard/styles.css
@@ -6,6 +6,7 @@
     --card-text-color-dark: #000000;
     --card-text-color-light: #636363;
     --card-box-shadow-color: rgba(0, 0, 0, 0.1);
+    --card-gap: 1.5rem;
 }
 
 * {
@@ -86,6 +87,7 @@ body {
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
+    gap: var(--card-gap);
     padding: 1rem 3rem;
     box-shadow: 0 5px 5px var(--card-box-shadow-color);
     z-index: 1;
@@ -212,7 +214,7 @@ body {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr;
-    column-gap: 1rem;
+    column-gap: var(--card-gap);
     padding: 0 1rem;
     padding-bottom: 1rem;
 }
@@ -253,9 +255,9 @@ body {
 .content .projects .card-container {
     flex: 1 1 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-template-rows: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 1rem;
+    gap: var(--card-gap);
 }
 
 .content .projects .card {
