--- a/007-admin-dashboard/styles.css
+++ b/007-admin-dashboard/styles.css
@@ -31,6 +31,20 @@ body {
     height: 100vh;
 }
 
+.container .profile-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(2 * var(--radius));
+    width: calc(2 * var(--radius));
+    border-radius: var(--radius);
+}
+
+.container .profile-image img {
+    max-width: 80%;
+    max-height: 80%;
+}
+
 .sidebar {
     background-color: var(--sidebar-background-color);
     color: var(--header-background-color);
@@ -155,9 +169,6 @@ body {
 .header .notifications .profile-image {
     background-color: var(--accent-color);
     --radius: 1.2rem;
-    height: calc(2 * var(--radius));
-    width: calc(2 * var(--radius));
-    border-radius: var(--radius);
 }
 
 .header .welcome-banner {
@@ -169,10 +180,7 @@ body {
 .header .welcome-banner .profile-image {
     flex: 0 0 auto;
     --radius: 1.9rem;
-    height: calc(2 * var(--radius));
-    width: calc(2 * var(--radius));
     background-color: var(--accent-color);
-    border-radius: var(--radius);
 }
 
 .header .welcome-banner .message .greeting {
@@ -362,17 +370,6 @@ body {
 
 .content .trending .trending-project .profile-image {
     --radius: 1.4rem;
-    height: calc(2 * var(--radius));
-    width: calc(2 * var(--radius));
-    border-radius: var(--radius);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.content .trending .trending-project .profile-image img {
-    max-width: 80%;
-    max-height: 80%;
 }
 
 .content .trending .trending-project .user-tag {
