Remove extra top margin on header image

--- a/008-homepage/styles.css
+++ b/008-homepage/styles.css
@@ -250,7 +250,8 @@ ul {
     }
 
     header .image {
-        margin: 2rem 0;
+        margin: 0;
+        margin-bottom: 2rem;
         padding: 0;
         float: none;
         width: 300px;
