Apply styles to footer

--- a/008-homepage/styles.css
+++ b/008-homepage/styles.css
@@ -201,6 +201,55 @@ ul {
     margin-left: auto;
 }
 
+footer {
+    padding: 3rem;
+}
+
+footer .content {
+    display: flex;
+    align-items: flex-start;
+    gap: var(--project-card-gap);
+}
+
+footer .contact-me {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+footer .contact-me address {
+    font-style: normal;
+}
+
+footer .contact-me span .icon {
+    height: 1.2rem;
+    filter: invert(100%);
+    padding: 0;
+}
+
+footer .contact-me span {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+footer .contact-me nav {
+    display: flex;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+footer .contact-me nav .icon {
+    height: 2rem;
+    padding: 0;
+}
+
+footer .image {
+    height: 400px;
+    width: 600px;
+    background-color: lightblue;
+}
+
 @media (480px < width <=1080px) {
     :root {
         --header-image-overflow-top: 6rem;
