--- a/008-homepage/styles.css
+++ b/008-homepage/styles.css
@@ -202,7 +202,7 @@ ul {
 }
 
 footer {
-    padding: 3rem;
+    padding: 3rem 0;
 }
 
 footer .content {
@@ -212,6 +212,7 @@ footer .content {
 }
 
 footer .contact-me {
+    flex: 1 1 200px;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -245,8 +246,8 @@ footer .contact-me nav .icon {
 }
 
 footer .image {
+    flex: 1 1 200px;
     height: 400px;
-    width: 600px;
     background-color: lightblue;
 }
 
@@ -273,7 +274,27 @@ footer .image {
     }
 }
 
+@media (width <=700px) {
+    footer .content {
+        flex-direction: column;
+    }
+
+    footer .image {
+        flex: 1 1 auto;
+        width: 100%;
+        align-self: center;
+    }
+
+    footer .contact-me span .icon {
+        display: none;
+    }
+}
+
 @media (width <=480px) {
+    :root {
+        --min-project-card-width: 200px;
+    }
+
     .content h2 {
         text-align: center;
     }
@@ -302,7 +323,7 @@ footer .image {
         margin-bottom: 2rem;
         padding: 0;
         float: none;
-        width: 300px;
+        width: 100%;
         background-color: lightcoral;
     }
 
@@ -316,5 +337,9 @@ footer .image {
 
     header .card p {
         margin: 0.5rem 0;
+    }
+
+    footer .contact-me nav {
+        align-self: center;
     }
 }
