Keep name at top of image until 480px

--- a/008-homepage/styles.css
+++ b/008-homepage/styles.css
@@ -279,6 +279,12 @@ footer .image {
     }
 }
 
+@media (480px < width < 800px) {
+    header .name {
+        margin: 0;
+    }
+}
+
 @media (width <=700px) {
     footer .content {
         flex-direction: column;
