--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 
 .library .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 1rem;
 }
 
