--- a/src/App.css
+++ b/src/App.css
@@ -35,18 +35,19 @@
   display: flex;
   flex-direction: column;
   padding: 1.5rem;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  background-color: #292929;
+  border: 1px solid var(--book-border-color);
   border-radius: 20px;
 }
 
 .book:hover {
-  background-color: rgba(255, 255, 255, 0.01);
+  background-color: var(--background-color-hover);
   cursor: pointer;
 }
 
 .book .author,
 .book p {
-  color: rgba(255, 255, 255, 0.5);
+  color: var(--color-dim);
 }
 
 .book p:last-of-type {
@@ -65,7 +66,7 @@ dialog {
 }
 
 dialog::backdrop {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: var(--dialog-backdrop);
 }
 
 dialog button.close-dialog {
