--- a/src/index.css
+++ b/src/index.css
@@ -68,10 +68,14 @@ button:hover {
   button {
     background-color: #dadada;
   }
+
   .book {
     background-color: #f9f9f9;
     box-shadow:
       0 1px 2px rgba(0, 0, 0, 0.1),
       0 2px 3px rgba(0, 0, 0, 0.1);
+  }
+  .book .icon img {
+    filter: invert(0);
   }
 }
