--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
+  --background-color: #242424;
   --color-dim: rgba(255, 255, 255, 0.5);
   --background-color-hover: rgba(255, 255, 255, 0.05);
   --dialog-backdrop: rgba(0, 0, 0, 0.5);
@@ -25,8 +26,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -57,6 +56,7 @@ button:hover {
     color: #213547;
     background-color: #f0f0f0;
 
+    --background-color: #f0f0f0;
     --color-dim: rgba(0, 0, 0, 0.6);
     --background-color-hover: #ffffff;
     --dialog-backdrop: rgba(0, 0, 0, 0.3);
