--- a/010-tic-tac-toe/src/App/App.css
+++ b/010-tic-tac-toe/src/App/App.css
@@ -3,5 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
 }
