--- a/010-tic-tac-toe/src/App/Components/PlayerCard/PlayerCard.css
+++ b/010-tic-tac-toe/src/App/Components/PlayerCard/PlayerCard.css
@@ -2,38 +2,40 @@
   display: flex;
   flex-direction: column;
   font-family: monospace;
+  align-items: center;
   width: 200px;
 }
 
 .player-card > .symbol {
-  line-height: normal;
+  line-height: 1;
   font-size: 10rem;
 }
 
-.player-card > .name,
+.player-card:not(.active) > .symbol,
+.player-card:not(.active) > input[type="text"]:disabled {
+  opacity: 0.2;
+}
+
 .player-card > input[type="text"] {
+  text-align: center;
   font-family: inherit;
   font-size: 2rem;
   padding: 0;
   color: inherit;
   width: 100%;
+  background-color: #343434;
+  border: none;
 }
 
-.player-card:not(.active) > .symbol,
-.player-card:not(.active) > .name {
-  opacity: 0.2;
+.player-card > input[type="text"]:disabled {
+  background-color: inherit;
+}
+
+.player-card > input[type="text"]:focus-visible {
+  outline: none;
 }
 
 .player-card > button {
   font-size: 1rem;
   margin-top: auto;
-}
-
-.player-card > input[type="text"] {
-  background: #343434;
-  border: none;
-}
-
-.player-card > input[type="text"]:focus-visible {
-  outline: none;
 }
