wip: update projects on todo status change

--- a/011-todo-list/src/App/Components/TodoList/TodoList.css
+++ b/011-todo-list/src/App/Components/TodoList/TodoList.css
@@ -29,6 +29,10 @@
   background-color: rgba(255, 255, 255, 0.03);
 }
 
+.todo-list table .todo-status {
+  text-align: center;
+}
+
 @media (prefers-color-scheme: light) {
   .todo-list {
     background-color: rgba(0, 0, 0, 0.03);
