Distinguish active project in navigator

--- a/011-todo-list/src/App/Components/ProjectNavigator/ProjectNavigator.css
+++ b/011-todo-list/src/App/Components/ProjectNavigator/ProjectNavigator.css
@@ -11,6 +11,7 @@
   padding: 0.5rem;
 }
 
+.project-navigator li.active,
 .project-navigator li:hover {
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.05);
