--- a/011-todo-list/src/App/Components/ProjectNavigator/ProjectNavigator.css
+++ b/011-todo-list/src/App/Components/ProjectNavigator/ProjectNavigator.css
@@ -22,6 +22,7 @@
 }
 
 @media (prefers-color-scheme: light) {
+  .project-navigator li.active,
   .project-navigator li:hover {
     background-color: rgba(0, 0, 0, 0.05);
   }
