--- a/011-todo-list/src/App/Components/TodoList/TodoList.css
+++ b/011-todo-list/src/App/Components/TodoList/TodoList.css
@@ -3,17 +3,10 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  background-color: rgba(255, 255, 255, 0.03);
 }
 
 .todo-list .is-empty {
   text-align: center;
-}
-
-.todo-list table {
-  padding: 1rem;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 10px;
 }
 
 /* widths do not need to add to 100% */
@@ -46,23 +39,24 @@
   background-color: rgba(255, 255, 255, 0.03);
 }
 
+.todo-list table tbody * {
+  cursor: pointer;
+}
+
 .todo-list table .todo-status {
   text-align: center;
 }
 
+.todo-list table tr.active {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
 @media (prefers-color-scheme: light) {
-  .todo-list {
-    background-color: rgba(0, 0, 0, 0.03);
-  }
-
-  .todo-list table {
-    background-color: white;
-    box-shadow:
-      0 1px 2px rgba(0, 0, 0, 0.1),
-      0 1px 5px rgba(0, 0, 0, 0.1);
-  }
-
   .todo-list table tbody {
     background-color: rgba(0, 0, 0, 0.03);
+  }
+
+  .todo-list table tr.active {
+    background-color: rgba(0, 0, 0, 0.1);
   }
 }
