--- a/011-todo-list/src/App/App.css
+++ b/011-todo-list/src/App/App.css
@@ -2,11 +2,12 @@
   flex: 1 0;
   border: 1px solid red;
   display: flex;
-  flex-direction: column;
   padding: 8px;
 }
 
-.container {
+.flex-column {
   flex: 1;
   display: flex;
+  flex-direction: column;
+  padding: 1rem;
 }
