--- a/011-todo-list/src/App/Components/ProjectNavigator/ProjectNavigator.css
+++ b/011-todo-list/src/App/Components/ProjectNavigator/ProjectNavigator.css
@@ -1,5 +1,6 @@
 .project-navigator {
   width: clamp(150px, 20%, 250px);
+  background-color: rgba(255, 255, 255, 0.03);
 }
 
 .project-navigator ul {
@@ -22,6 +23,9 @@
 }
 
 @media (prefers-color-scheme: light) {
+  .project-navigator {
+    background-color: rgba(0, 0, 0, 0.03);
+  }
   .project-navigator li.active,
   .project-navigator li:hover {
     background-color: rgba(0, 0, 0, 0.05);
