Make input backgrounds transparent

--- a/011-todo-list/src/App/Components/Header/Header.css
+++ b/011-todo-list/src/App/Components/Header/Header.css
@@ -17,7 +17,7 @@ header .active-project {
 
 header .active-project input[type="text"] {
   font: inherit;
-  background-color: inherit;
+  background-color: transparent;
   color: inherit;
   appearance: none;
   border: none;
