--- a/011-todo-list/src/App/Components/TodoList/TodoList.css
+++ b/011-todo-list/src/App/Components/TodoList/TodoList.css
@@ -1,7 +1,7 @@
 .todo-list {
   display: flex;
   flex-direction: column;
-  margin-bottom: 1rem;
+  padding: 1rem 1.5rem;
 }
 
 .todo-list > .title {
