Improve confirmation modal contrast

--- a/011-todo-list/src/App/Components/Modal/ConfirmationModal.css
+++ b/011-todo-list/src/App/Components/Modal/ConfirmationModal.css
@@ -1,12 +1,17 @@
 .confirmation-modal {
   border: 2px solid rgba(255, 255, 255, 0.2);
   border-radius: 10px;
+  background-color: var(--background-color);
+}
+
+.confirmation-modal::backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .confirmation-modal .contents {
   display: flex;
   flex-direction: column;
-  padding: 0 1rem;
+  padding: 1rem 2rem;
   gap: 1rem;
 }
 
